# Copyright (c) 2010-2022 The Open-Transactions developers
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

add_subdirectory(blind)
add_subdirectory(blockchain)
add_subdirectory(client)
add_subdirectory(contact)
add_subdirectory(context)
add_subdirectory(core)
add_subdirectory(crypto)
add_subdirectory(identity)
add_subdirectory(network)
add_subdirectory(otx)
add_subdirectory(paymentcode)
add_subdirectory(rpc)
add_subdirectory(ui)
