# Copyright (c) 2010-2022 The Open-Transactions developers
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

target_sources(
  opentxs-common
  PRIVATE
    "${opentxs_SOURCE_DIR}/src/internal/api/network/OTDHT.hpp"
    "ChainEndpoint.cpp"
    "ChainEndpoint.hpp"
    "Disable.cpp"
    "Disable.hpp"
    "Enable.cpp"
    "Enable.hpp"
    "GetEndpoint.cpp"
    "GetEndpoint.hpp"
    "Init.cpp"
    "Init.hpp"
    "OTDHT.cpp"
    "OTDHT.hpp"
    "Start.cpp"
    "Start.hpp"
)
set(cxx-install-headers
    "${opentxs_SOURCE_DIR}/include/opentxs/api/network/OTDHT.hpp"
)
target_sources(opentxs-common PRIVATE ${cxx-install-headers})
target_link_libraries(opentxs-common PUBLIC Boost::headers)
target_link_libraries(opentxs PUBLIC Boost::system)
target_include_directories(
  opentxs-common SYSTEM PRIVATE "${opentxs_SOURCE_DIR}/deps/cs_libguarded/src"
)

if(OPENTXS_STANDALONE)
  install(
    FILES ${cxx-install-headers}
    DESTINATION include/opentxs/api/network
    COMPONENT dev
  )
endif()
